Fixed invisible icon for remove control point in wires

--- a/app/styles/design.css
+++ b/app/styles/design.css
@@ -803,3 +803,12 @@ right:-27px;
 .ace_gutter-layer{
 
 }
+
+.marker-vertex-remove-area {
+    fill: green;
+    stroke: darkgreen;
+}
+.marker-vertex-remove {
+    fill: white;
+    stroke: white;
+}
